--- a/docker-compose/nginx1/test.conf
+++ b/docker-compose/nginx1/test.conf
@@ -2,24 +2,28 @@ server {
     listen 80; 
     server_name nginx1;  
 
-    root /var/www/public;  # Dossier racine où les fichiers sont servis
-    index index.php index.html index.htm;  # Fichiers index par défaut
+    root /var/www/public;  
+    index index.php index.html index.htm;  
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;  # Gère les URLs propres de Laravel
+        # Gère les URLs propres de Laravel
+        try_files $uri $uri/ /index.php?$query_string;  
     }
 
     location ~ \.php$ {
         try_files $uri =404;  #if script exist
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;  # Divise les informations du chemin pour le transfert vers PHP-FPM
-        fastcgi_pass php1:9000;  # Envoie les requêtes PHP à PHP-FPM via le réseau Docker
-        fastcgi_index index.php;  # Définit index.php comme index par défaut pour les requêtes PHP
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;  
+        # Envoie les requêtes PHP à PHP-FPM via le réseau Docker
+        fastcgi_pass php1:9000;  
+        # Définit index.php comme index par défaut
+        fastcgi_index index.php;   
         include fastcgi_params;  
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  #nom du script PHP
-        fastcgi_param PATH_INFO $fastcgi_path_info;  # Paramètre pour l'info de chemin PHP
+        #nom du script PHP
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  
+        fastcgi_param PATH_INFO $fastcgi_path_info; 
     }
     
-    error_log  /var/log/nginx/error.log;  # Fichier de log des erreurs
-    access_log /var/log/nginx/access.log;  # Fichier de log des accès
+    error_log  /var/log/nginx/error.log;  #log des erreurs
+    access_log /var/log/nginx/access.log;  #log des accès
 }
 
