--- a/compose.yml
+++ b/compose.yml
@@ -4,15 +4,15 @@ version: '3.8'
 services:
   # Service Nginx 1
   nginx1:
-    image: nginx:alpine  # Utilise l'image légère Alpine de Nginx
-    container_name: nginx1
+    image: nginx:alpine  
     ports:
-      - "8081:80"  # Mappe le port 80 du conteneur au port 8081 de l'hôte
+      - "8081:80"  
     volumes:
-      - ./nginx1/default.conf:/etc/nginx/conf.d/default.conf  # Montage du fichier de configuration Nginx
-      - ./site:/var/www  # Montage du code source de Laravel
+      - ./nginx1/default.conf:/etc/nginx/conf.d/default.conf  
+      - ./site:/var/www  
+  
     depends_on:
-      - php1  # Dépendance vis-à-vis du service PHP1
+      - php1  
 
   # Service Nginx 2
   nginx2:
@@ -21,7 +21,7 @@ services:
     ports:
       - "8082:80"
     volumes:
-      - ./nginx2/default.conf:/etc/nginx/conf.d/default.conf
+      - C:/Users/pierr/Documents/3i-ESGI/Projet Semes/docker-project/nginx2/default.conf:/etc/nginx/conf.d/default.conf
       - ./site:/var/www
     depends_on:
       - php2
@@ -29,12 +29,12 @@ services:
   # Service PHP 1
   php1:
     build:
-      context: ./php1  # Contexte de construction Docker, utilisant le Dockerfile dans ./php
+      context: ./php1  
     container_name: php1
     volumes:
-      - ./site:/var/www  # Montage du code source de Laravel
+      - ./site:/var/www  
     depends_on:
-      - mysql  # Dépendance de MySQL
+      - mysql 
 
   # Service PHP 2
   php2:
@@ -52,12 +52,12 @@ services:
     container_name: mysql
     restart: always
     environment:
-      MYSQL_DATABASE: laravel  # Nom de la base de données
-      MYSQL_USER: root  # Utilisateur de la base de données
-      MYSQL_PASSWORD:   # Mot de passe de l'utilisateur
-      MYSQL_ROOT_PASSWORD:   # Mot de passe root de MySQL
+      MYSQL_DATABASE: laravel  
+      MYSQL_USER: root  
+      MYSQL_PASSWORD:
+      MYSQL_ROOT_PASSWORD: 
     volumes:
-      - db_data:/var/lib/mysql  # Volume pour la persistance des données MySQL
+      - db_data:/var/lib/mysql  
 
 volumes:
-  db_data:  # Déclaration du volume pour la base de données
+  db_data:
