--- a/docker-compose/nginx2/test.conf
+++ b/docker-compose/nginx2/test.conf
@@ -1,21 +1,29 @@
-
 server {
-    listen 80;
-    index index.php index.html;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    root /var/www/public;
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
+    listen 80; 
+    server_name nginx2;  
+
+    root /var/www/public;  
+    index index.php index.html index.htm;  
+
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
+        # Gère les URLs propres de Laravel
+        try_files $uri $uri/ /index.php?$query_string;  
     }
+
+    location ~ \.php$ {
+        try_files $uri =404;  #if script exist
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;  
+        # Envoie les requêtes PHP à PHP-FPM via le réseau Docker
+        fastcgi_pass php2:9000;  
+        # Définit index.php comme index par défaut
+        fastcgi_index index.php;   
+        include fastcgi_params;  
+        #nom du script PHP
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  
+        fastcgi_param PATH_INFO $fastcgi_path_info; 
+    }
+    
+    error_log  /var/log/nginx/error.log;  #log des erreurs
+    access_log /var/log/nginx/access.log;  #log des accès
 }
+
