--- a/.env
+++ b/.env
@@ -31,3 +31,8 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@esgi.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+REDIS_HOST=redis
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+# ADD REDIS
